[gd_scene load_steps=4 format=3 uid="uid://cf470kj0215b8"]

[ext_resource type="PackedScene" uid="uid://b28nji74vp1ow" path="res://objects/zs_card_space.tscn" id="1_0618v"]
[ext_resource type="Script" path="res://scripts/zs_card_play_space.gd" id="1_fs835"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qbtt"]
resource_local_to_scene = true
size = Vector2(12, 17)

[node name="zs_card_space" groups=["play_space"] instance=ExtResource("1_0618v")]
script = ExtResource("1_fs835")
lock_space = false
face_down_space = false
can_swap = true

[node name="shape" parent="." index="0"]
shape = SubResource("RectangleShape2D_7qbtt")

[connection signal="card_added" from="." to="." method="_on_card_added"]
[connection signal="card_removed" from="." to="." method="_on_card_removed"]
[connection signal="card_returned" from="." to="." method="_on_card_returned"]
